# ChangeLog for games-strategy/wesnoth
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.95 2007/07/26 07:13:42 opfer Exp $

  26 Jul 2007; Christian Faulhammer <opfer@gentoo.org> wesnoth-1.2.5.ebuild:
  stable x86, bug 186446

  26 Jul 2007; Joseph Jezak <josejx@gentoo.org> wesnoth-1.2.5.ebuild:
  Marked ppc/ppc64 stable for bug #186446.

  24 Jul 2007; Ferris McCormick <fmccor@gentoo.org> wesnoth-1.2.5.ebuild:
  Sparc stable --- Bug #186446 --- builds fine and test scenario appears to work.

*wesnoth-1.2.5 (15 Jun 2007)

  15 Jun 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.2.5.ebuild:
  version bump

*wesnoth-1.2.4 (16 Apr 2007)

  16 Apr 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.2.4.ebuild:
  version bump

*wesnoth-1.2.3 (16 Mar 2007)

  16 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.2.3.ebuild:
  version bump

  25 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org> wesnoth-1.2.2.ebuild:
  add built_with_use media-libs/libsdl X for bug #162954

*wesnoth-1.2.2 (21 Feb 2007)

  21 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.2.2.ebuild:
  version bump

  02 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org> wesnoth-1.2.1.ebuild:
  Add media-libs/freetype for dedicated build until configure script is fixed
  (reported by Miika Linnapuomi)

*wesnoth-1.2.1 (14 Jan 2007)

  14 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.2.1.ebuild:
  version bump

  28 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -wesnoth-1.1.14.ebuild:
  clean beta version

*wesnoth-1.2 (28 Dec 2006)

  28 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org> +wesnoth-1.2.ebuild:
  version bump

*wesnoth-1.1.14 (16 Dec 2006)

  16 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -wesnoth-1.1.11.ebuild, -wesnoth-1.1.12.ebuild, -wesnoth-1.1.13.ebuild,
  +wesnoth-1.1.14.ebuild:
  masked version bump; clean old ebuilds
