@@ -1,0 +1,3 @@
+MD5 accb3d5e3c4423324a17755571ac9204 wesnoth-1.2.6.tar.bz2 68854174
+RMD160 59ea14343ecbfd542fbaf86c209dcc2cd39a394f wesnoth-1.2.6.tar.bz2 68854174
+SHA256 43499b99cfa06fd6966d5756cd756eab672d30a605a20da6bc4441126aca28ee wesnoth-1.2.6.tar.bz2 68854174
