@@ -1,6 +1,12 @@
 # ChangeLog for games-strategy/wesnoth
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.95 2007/07/26 07:13:42 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.96 2007/07/26 19:45:04 mr_bones_ Exp $
+
+*wesnoth-1.2.6 (26 Jul 2007)
+
+  26 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org>
+  +wesnoth-1.2.6.ebuild:
+  version bump
 
   26 Jul 2007; Christian Faulhammer <opfer@gentoo.org> wesnoth-1.2.5.ebuild:
   stable x86, bug 186446
